fixed bg-fixed on ios

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -246,11 +246,14 @@ img {
 
 
 /* lead */
+.lead {
+  background: #f5f5f5;
+  padding: 40px 0;
+}
+
 .lead p {
   font-weight: 600;
   text-align: justify;
-  margin: 40px 0;
-  font-size: 16px;
 }
 
 @media screen and (min-width: 768px) {
@@ -413,13 +416,38 @@ img {
   }
 }
 
-.poster {
-  height: 100vh;
+.poster:before {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  z-index: -1;
 }
+
+.poster {
+  height: 100vh;
+}
+
+.poster-primary:before {
+  background-image: url(../images/cover-poster.jpg);
+}
+
+.poster-secondary:before {
+  background-image: url(../images/cover-poster.jpg);
+}
+
+/*
+.poster-tertiary:before {
+  background-image: url(../images/cover-poster.jpg);
+}
+*/
 
 /* word */
 .word {
